// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Card hoverable unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated memori-card--interactive"
    tabindex="0"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-card__header"
        >
          <div
            class="memori-card__title"
          >
            lorem-ipsum
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card loading unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin memori-spin--spinning"
      >
        <div
          class="memori-card__header"
        >
          <div
            class="memori-card__title"
          >
            Card title
          </div>
        </div>
        <div
          aria-label="Loading"
          aria-live="polite"
          class="memori-spin__overlay"
          role="status"
        >
          <div
            class="memori-spin__container"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-loader-circle memori-spin__icon"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 12a9 9 0 1 1-6.219-8.56"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      />
    </div>
  </div>
</div>
`;

exports[`renders Card with children unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      >
        <p>
          Ciao
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with cover unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__cover"
    >
      <img
        alt=""
        src="#"
      />
    </div>
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      />
    </div>
  </div>
</div>
`;

exports[`renders Card with custom CSS class unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated lorem-ipsum"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      />
    </div>
  </div>
</div>
`;

exports[`renders Card with description unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-card__header"
        >
          <div
            class="memori-card__description"
          >
            Card description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with title unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-card__header"
        >
          <div
            class="memori-card__title"
          >
            Card title
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
